dist/gfdeploy/LCB/LCB-war_war/images/iptables-squid
# Generated by iptables-save v1.4.7 on Mon Apr 13 12:25:12 2015
*nat
:PREROUTING ACCEPT [271:17108]
:POSTROUTING ACCEPT [1248:85329]
:OUTPUT ACCEPT [977:68221]
-A PREROUTING -s 172.16.7.0/24 -i eth1 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.16.7.1:8080 
COMMIT
# Completed on Mon Apr 13 12:25:12 2015
# Generated by iptables-save v1.4.7 on Mon Apr 13 12:25:12 2015
*filter
:INPUT DROP [6:336]
:FORWARD DROP [36:1464]
:OUTPUT ACCEPT [11639:3872008]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -i eth1 -p icmp -m state --state NEW -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW -j LOG --log-prefix "SSH CONNECTION: " 
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m multiport --dports 80,443 -j ACCEPT 
-A INPUT -i eth1 -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -i eth1 -o eth0 -p icmp -m state --state NEW -j ACCEPT 
-A FORWARD -i eth1 -o eth0 -p tcp -m state --state NEW -m multiport --dports 80,443 -j ACCEPT 
-A FORWARD -i eth1 -o eth0 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT 
COMMIT
# Completed on Mon Apr 13 12:25:12 2015
